# jira-pr-check-python

./: .gcloudignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test-pr-file.txt  test-update.txt
data/: README.md  pr-payload.json  push-payload.json
